Add: add test code for domain layer
